feat: allow recursive definition of card selections