@@ -2,13 +2,14 @@ package io.inblocks.civicpower.cryptopolitics.models.transformations;
 
 import io.inblocks.civicpower.cryptopolitics.exceptions.CardClassFinitudeMismatch;
 import io.inblocks.civicpower.cryptopolitics.models.*;
+import io.micronaut.test.extensions.junit5.annotation.MicronautTest;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
+@MicronautTest
 class ExtendTalonTransformationTest extends TransformationTest {
 
   @Test
@@ -25,8 +26,8 @@ class ExtendTalonTransformationTest extends TransformationTest {
     Talon newTalon = transformation.apply(makeSomeContext(), talon);
     Assertions.assertEquals(2, newTalon.classes.size());
     Assertions.assertEquals(
-        talon.getCardClassDataByClass("COMMON"), newTalon.getCardClassDataByClass("COMMON"));
-    Assertions.assertEquals(newClass, newTalon.getCardClassDataByClass("NEW"));
+        talon.getCardClassByName("COMMON"), newTalon.getCardClassByName("COMMON"));
+    Assertions.assertEquals(newClass, newTalon.getCardClassByName("NEW"));
     Assertions.assertNull(transformation.getResults());
   }
 
@@ -44,15 +45,15 @@ class ExtendTalonTransformationTest extends TransformationTest {
             Talon.builder().classes(Collections.singletonList(newClass)).build());
     Talon newTalon = transformation.apply(makeSomeContext(), talon);
     Assertions.assertEquals(1, newTalon.classes.size());
-    CardClass cardClass = newTalon.getCardClassDataByClass("COMMON");
+    CardClass cardClass = newTalon.getCardClassByName("COMMON");
     Assertions.assertEquals(3, cardClass.series.size());
     Assertions.assertEquals(
-        talon.getCardClassDataByClass("COMMON").getSerieByName("first"),
-        cardClass.getSerieByName("first"));
+        talon.getCardClassByName("COMMON").getCardSerieByName("first"),
+        cardClass.getCardSerieByName("first"));
     Assertions.assertEquals(
-        talon.getCardClassDataByClass("COMMON").getSerieByName("second"),
-        cardClass.getSerieByName("second"));
-    Assertions.assertEquals(newSerie, cardClass.getSerieByName("clean"));
+        talon.getCardClassByName("COMMON").getCardSerieByName("second"),
+        cardClass.getCardSerieByName("second"));
+    Assertions.assertEquals(newSerie, cardClass.getCardSerieByName("clean"));
     Assertions.assertNull(transformation.getResults());
   }
 
@@ -69,12 +70,12 @@ class ExtendTalonTransformationTest extends TransformationTest {
             Talon.builder().classes(Collections.singletonList(classExtension)).build());
     Talon newTalon = transformation.apply(makeSomeContext(), talon);
     Assertions.assertEquals(1, newTalon.classes.size());
-    CardClass cardClass = newTalon.getCardClassDataByClass("COMMON");
+    CardClass cardClass = newTalon.getCardClassByName("COMMON");
     Assertions.assertEquals(2, cardClass.series.size());
     Assertions.assertEquals(
-        talon.getCardClassDataByClass("COMMON").getSerieByName("first"),
-        cardClass.getSerieByName("first"));
-    final CardSerie secondSerie = cardClass.getSerieByName("second");
+        talon.getCardClassByName("COMMON").getCardSerieByName("first"),
+        cardClass.getCardSerieByName("first"));
+    final CardSerie secondSerie = cardClass.getCardSerieByName("second");
     Assertions.assertEquals(7, secondSerie.size);
     Assertions.assertEquals(7, secondSerie.count());
     Assertions.assertEquals(0, secondSerie.initialDealIndex);
@@ -91,7 +92,7 @@ class ExtendTalonTransformationTest extends TransformationTest {
                         .cardClass("COMMON")
                         .series(
                             Collections.singletonList(
-                                new CardSerie("first", 2).pickNextCard().remainingCards))
+                                new CardSerie("first", 2).pickCard().remainingCards))
                         .build()))
             .build();
     final CardClass classExtension =
@@ -103,22 +104,22 @@ class ExtendTalonTransformationTest extends TransformationTest {
         new ExtendTalonTransformation(
             Talon.builder().classes(Collections.singletonList(classExtension)).build());
     Talon newTalon = transformation.apply(makeSomeContext(), talon);
-    CardSerie newSerie = newTalon.getCardClassDataByClass("COMMON").getSerieByName("first");
+    CardSerie newSerie = newTalon.getCardClassByName("COMMON").getCardSerieByName("first");
     Assertions.assertEquals(5, newSerie.size);
     Assertions.assertEquals(4, newSerie.count());
     // Next one out is the card remaining from unextended serie
-    PickNextCardResult pick1 = newTalon.pickNextCard("COMMON", 42);
-    Assertions.assertEquals(new Card("COMMON", "first", 2), pick1.card);
+    SelectionResult pick1 = newTalon.pickCardByClass("COMMON", 42);
+    Assertions.assertEquals(List.of(new Card("COMMON", "first", 2)), pick1.cards);
     // Then the first extension card
-    PickNextCardResult pick2 = pick1.remainingCards.pickNextCard("COMMON", 42);
-    Assertions.assertEquals(new Card("COMMON", "first", 3), pick2.card);
+    SelectionResult pick2 = pick1.remainingCards.pickCardByClass("COMMON", 42);
+    Assertions.assertEquals(List.of(new Card("COMMON", "first", 3)), pick2.cards);
   }
 
   @Test
   void extendSerieAfterInitialDeal() {
     final CardSerie oldSerie = new CardSerie("first", 2)
-            .pickNextCard().remainingCards
-            .pickNextCard().remainingCards // now depleted
+            .pickCard().remainingCards
+            .pickCard().remainingCards // now depleted
             .addCard(1);
     Talon talon =
             Talon.builder()
@@ -139,18 +140,18 @@ class ExtendTalonTransformationTest extends TransformationTest {
             new ExtendTalonTransformation(
                     Talon.builder().classes(Collections.singletonList(classExtension)).build());
     Talon newTalon = transformation.apply(makeSomeContext(), talon);
-    CardSerie newSerie = newTalon.getCardClassDataByClass("COMMON").getSerieByName("first");
+    CardSerie newSerie = newTalon.getCardClassByName("COMMON").getCardSerieByName("first");
     Assertions.assertEquals(4, newSerie.size);
     Assertions.assertEquals(3, newSerie.count());
     // Next one out is first extension card
-    PickNextCardResult pick1 = newTalon.pickNextCard("COMMON", 42);
-    Assertions.assertEquals(new Card("COMMON", "first", 3), pick1.card);
+    SelectionResult pick1 = newTalon.pickCardByClass("COMMON", 42);
+    Assertions.assertEquals(List.of(new Card("COMMON", "first", 3)), pick1.cards);
     // Then second extension card
-    PickNextCardResult pick2 = pick1.remainingCards.pickNextCard("COMMON", 42);
-    Assertions.assertEquals(new Card("COMMON", "first", 4), pick2.card);
+    SelectionResult pick2 = pick1.remainingCards.pickCardByClass("COMMON", 42);
+    Assertions.assertEquals(List.of(new Card("COMMON", "first", 4)), pick2.cards);
     // Then the remaining card
-    PickNextCardResult pick3 = pick2.remainingCards.pickNextCard("COMMON", 42);
-    Assertions.assertEquals(new Card("COMMON", "first", 1), pick3.card);
+    SelectionResult pick3 = pick2.remainingCards.pickCardByClass("COMMON", 42);
+    Assertions.assertEquals(List.of(new Card("COMMON", "first", 1)), pick3.cards);
   }
 
   @Test
@@ -199,14 +200,14 @@ class ExtendTalonTransformationTest extends TransformationTest {
     ExtendTalonTransformation transformation =
             new ExtendTalonTransformation(extraTalon);
     Talon newTalon = transformation.apply(makeSomeContext(), firstTalon);
-    CardClass commonClass = newTalon.getCardClassDataByClass("COMMON");
+    CardClass commonClass = newTalon.getCardClassByName("COMMON");
     Assertions.assertEquals(2, commonClass.getSeries().size());
-    Assertions.assertFalse(commonClass.getSerieByName("INITIAL_FINITE").isInfinite());
-    Assertions.assertFalse(commonClass.getSerieByName("NEW_FINITE").isInfinite());
-    CardClass freeClass = newTalon.getCardClassDataByClass("FREE");
+    Assertions.assertFalse(commonClass.getCardSerieByName("INITIAL_FINITE").isInfinite());
+    Assertions.assertFalse(commonClass.getCardSerieByName("NEW_FINITE").isInfinite());
+    CardClass freeClass = newTalon.getCardClassByName("FREE");
     Assertions.assertEquals(2, freeClass.getSeries().size());
-    Assertions.assertTrue(freeClass.getSerieByName("INITIAL_INFINITE").isInfinite());
-    Assertions.assertTrue(freeClass.getSerieByName("NEW_INFINITE").isInfinite());
+    Assertions.assertTrue(freeClass.getCardSerieByName("INITIAL_INFINITE").isInfinite());
+    Assertions.assertTrue(freeClass.getCardSerieByName("NEW_INFINITE").isInfinite());
   }
 
   @Test
@@ -250,7 +251,7 @@ class ExtendTalonTransformationTest extends TransformationTest {
                 CardClass.builder()
                     .cardClass("COMMON")
                     .series(
-                        Arrays.asList(
+                        List.of(
                             new CardSerie("first", 2), new CardSerie("second", 3)))
                     .build()))
         .build();
